--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>智享社区云平台</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <title>智享社区云平台</title>
+</head>
+<script src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=4h17pppWzEit6XBAYciAbcBINHiKrAwx"></script>
+<script src="//mapv.baidu.com/build/mapv.min.js"></script>
+<script src="//code.bdstatic.com/npm/mapvgl@1.0.0-beta.60/dist/mapvgl.min.js"></script>
+
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
